# OrcaTrack-Real-Time-Process-Monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.py  process_monitor.py  process_monitor.spec  requirements.txt
gui/: CMakeLists.txt  __init__.py  dashboard.py  window.cpp  window.hpp
monitor/: CMakeLists.txt  __init__.py  process_manager.py  process_monitor.cpp  process_monitor.hpp  system_monitor.py
releases/: v0.1.0-alpha.md
src/: CMakeLists.txt  main.cpp
